--- a/project/CURK/intelligent-parrot.html
+++ b/project/CURK/intelligent-parrot.html
@@ -76,6 +76,228 @@
 
     <!-- Common Styles -->
     <link rel="stylesheet" href="/styles/common-styles.css">
+
+    <style>
+        /* Theme Variables */
+        :root {
+            /* Light Theme (default) */
+            --bg-primary: #F9FAFB;
+            --bg-secondary: #F3F4F6;
+            --bg-card: rgba(255, 255, 255, 0.95);
+            --text-primary: #111827;
+            --text-secondary: #4B5563;
+            --text-muted: #6B7280;
+            --heading-color: #111827;
+            --border-color: #E5E7EB;
+            --accent-color: #F86825;
+            --teal-color: #0d9488;
+        }
+
+        [data-theme="dark"] {
+            --bg-primary: #0f172a;
+            --bg-secondary: #1e293b;
+            --bg-card: rgba(30, 41, 59, 0.95);
+            --text-primary: #f1f5f9;
+            --text-secondary: #cbd5e1;
+            --text-muted: #94a3b8;
+            --heading-color: #ffffff;
+            --border-color: #334155;
+            --accent-color: #F86825;
+            --teal-color: #14b8a6;
+        }
+
+        [data-theme="beige"] {
+            --bg-primary: #f5f1e8;
+            --bg-secondary: #ebe3d5;
+            --bg-card: rgba(245, 241, 232, 0.95);
+            --text-primary: #2d2a26;
+            --text-secondary: #5a534a;
+            --text-muted: #78716c;
+            --heading-color: #2d2a26;
+            --border-color: #d6cec0;
+            --accent-color: #F86825;
+            --teal-color: #0d9488;
+        }
+
+        body {
+            font-family: 'Pretendard', sans-serif;
+            background-color: var(--bg-primary);
+            color: var(--text-secondary);
+            transition: background-color 0.4s ease, color 0.4s ease;
+            scroll-behavior: smooth;
+        }
+
+        .themeable-card {
+            background-color: var(--bg-card);
+            border: 1px solid var(--border-color);
+        }
+
+        .themeable-heading {
+            color: var(--heading-color);
+        }
+
+        .themeable-text {
+            color: var(--text-secondary);
+        }
+
+        .themeable-text-muted {
+            color: var(--text-muted);
+        }
+
+        .accent-text {
+            color: var(--accent-color);
+        }
+
+        .teal-text {
+            color: var(--teal-color);
+        }
+
+        /* Interactive Cards with left border */
+        .interactive-card {
+            transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
+            border-left: 4px solid var(--border-color);
+        }
+
+        .interactive-card:hover {
+            transform: translateY(-4px);
+            box-shadow: 0 12px 24px rgba(0, 0, 0, 0.15);
+            border-left-color: var(--accent-color);
+        }
+
+        /* Statistics Card with gradient border */
+        .stat-card {
+            position: relative;
+            overflow: visible;
+        }
+
+        .stat-card::before {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 4px;
+            height: 100%;
+            background: linear-gradient(180deg, var(--accent-color), var(--teal-color));
+            border-radius: 2px 0 0 2px;
+        }
+
+        /* Timeline */
+        .timeline-item {
+            position: relative;
+            padding-left: 2rem;
+        }
+
+        .timeline-item::before {
+            content: '';
+            position: absolute;
+            left: 0;
+            top: 0.5rem;
+            width: 12px;
+            height: 12px;
+            border-radius: 50%;
+            background-color: var(--accent-color);
+            border: 2px solid var(--bg-primary);
+        }
+
+        .timeline-item::after {
+            content: '';
+            position: absolute;
+            left: 5px;
+            top: 1.5rem;
+            width: 2px;
+            height: calc(100% - 1rem);
+            background-color: var(--border-color);
+        }
+
+        .timeline-item:last-child::after {
+            display: none;
+        }
+
+        /* Icon wrapper */
+        .icon-wrapper {
+            display: inline-flex;
+            align-items: center;
+            justify-content: center;
+            width: 3rem;
+            height: 3rem;
+            border-radius: 0.75rem;
+            background-color: var(--bg-secondary);
+            color: var(--accent-color);
+        }
+
+        /* Fade-in animations */
+        .fade-in-card {
+            opacity: 0;
+            transform: translateY(20px);
+            transition: opacity 0.6s ease-out, transform 0.6s ease-out;
+        }
+
+        .fade-in-card.is-visible {
+            opacity: 1;
+            transform: translateY(0);
+        }
+
+        /* TOC styles */
+        .themeable-toc-border {
+            border-color: var(--border-color);
+        }
+
+        .themeable-toc-link {
+            color: var(--text-secondary);
+            border-color: transparent;
+            transition: all 0.2s ease-in-out;
+        }
+
+        .themeable-toc-link:hover {
+            border-color: var(--accent-color);
+            color: var(--accent-color);
+        }
+
+        .themeable-toc-link-active {
+            color: var(--accent-color) !important;
+            border-color: var(--accent-color) !important;
+            font-weight: 500;
+        }
+
+        /* Scroll to top button */
+        #scroll-to-top {
+            opacity: 0;
+            visibility: hidden;
+            transition: opacity 0.3s, visibility 0.3s, transform 0.3s;
+        }
+
+        #scroll-to-top.visible {
+            opacity: 1;
+            visibility: visible;
+        }
+
+        #scroll-to-top:hover {
+            transform: translateY(-4px) scale(1.1);
+        }
+
+        /* Responsive */
+        @media (max-width: 768px) {
+            h1 { font-size: 1.75rem; }
+            h2 { font-size: 1.5rem; }
+            h3 { font-size: 1.25rem; }
+        }
+
+        /* Table wrapper */
+        .table-wrapper {
+            overflow-x: auto;
+            -webkit-overflow-scrolling: touch;
+        }
+
+        table {
+            min-width: 600px;
+        }
+
+        /* Comparison row hover */
+        .comparison-row:hover {
+            background-color: var(--bg-secondary);
+            transition: background-color 0.2s ease;
+        }
+    </style>
 </head>
 <body>
     <!-- Header Placeholder -->
@@ -117,11 +339,11 @@
                     <!-- 발행 정보 -->
                     <div class="flex flex-wrap justify-center items-center gap-2 text-sm themeable-text-muted mb-8">
                         <span id="publish-date">작성일: 2025년 11월 28일</span>
-                        <span class="text-slate-600">|</span>
+                        <span>|</span>
                         <span id="publisher">기획: (주)페블러스 데이터 커뮤니케이션팀</span>
-                        <span class="text-slate-600">|</span>
+                        <span>|</span>
                         <span>AI 협업: Gemini</span>
-                        <span class="text-slate-600">|</span>
+                        <span>|</span>
                         <span>읽는 시간: 약 20분</span>
                     </div>
 
@@ -133,9 +355,9 @@
                 <section id="intro" class="mb-16 fade-in-card">
                     <h2 class="text-3xl font-bold themeable-heading mb-8">서론: 인공지능의 존재론적 위기와 지능 논쟁</h2>
 
-                    <div class="themeable-card rounded-xl p-8 mb-8">
+                    <div class="themeable-card rounded-xl p-8 mb-8 interactive-card">
                         <p class="themeable-text leading-relaxed mb-4">
-                            2024년과 2025년의 교차점에서 인공지능(AI) 학계와 산업계는 기술적 성취를 넘어선 심오한 철학적, 과학적 논쟁에 휩싸여 있다. 그 중심에는 <strong class="text-teal-400">"대규모 언어 모델(Large Language Models, LLMs)이 과연 '지능'을 가졌다고 볼 수 있는가?"</strong>라는 질문이 자리 잡고 있다.
+                            2024년과 2025년의 교차점에서 인공지능(AI) 학계와 산업계는 기술적 성취를 넘어선 심오한 철학적, 과학적 논쟁에 휩싸여 있다. 그 중심에는 <strong class="teal-text">"대규모 언어 모델(Large Language Models, LLMs)이 과연 '지능'을 가졌다고 볼 수 있는가?"</strong>라는 질문이 자리 잡고 있다.
                         </p>
                         <p class="themeable-text leading-relaxed mb-4">
                             Futurism에 게재된 프랭크 랜디모어(Frank Landymore)의 기사 "Large Language Models Will Never Be Intelligent(거대 언어 모델은 결코 지능적이지 않을 것이다)"는 이러한 회의론적 시각을 대변하는 대표적인 텍스트로, 언어 처리 능력과 일반 지능의 기능적 분리를 주장하며 LLM의 본질적 한계를 지적한다.
@@ -145,19 +367,19 @@
                         </p>
                     </div>
 
-                    <div class="bg-slate-800/30 border-l-4 border-teal-500 p-6 rounded-r-lg mb-8">
+                    <div class="themeable-card rounded-xl p-8 mb-8 stat-card">
                         <p class="text-sm themeable-text-muted mb-2 font-semibold">핵심 질문</p>
                         <ul class="space-y-2 themeable-text">
                             <li class="flex items-start gap-2">
-                                <span class="text-teal-400 mt-1">▪</span>
+                                <span class="teal-text mt-1">▪</span>
                                 <span>LLM은 단순한 통계적 모방 기계인가?</span>
                             </li>
                             <li class="flex items-start gap-2">
-                                <span class="text-teal-400 mt-1">▪</span>
+                                <span class="teal-text mt-1">▪</span>
                                 <span>텍스트 압축을 통해 세계 모델(World Model)을 구축한 새로운 형태의 지능체인가?</span>
                             </li>
                             <li class="flex items-start gap-2">
-                                <span class="text-teal-400 mt-1">▪</span>
+                                <span class="teal-text mt-1">▪</span>
                                 <span>AGI(인공일반지능)로 향하는 경로가 될 수 있는가?</span>
                             </li>
                         </ul>
@@ -174,7 +396,7 @@
 
                     <h3 class="text-2xl font-semibold themeable-heading mb-6">1.1 언어와 지능의 분리: 벤자민 라일리와 신경과학적 근거</h3>
 
-                    <div class="themeable-card rounded-xl p-8 mb-8">
+                    <div class="themeable-card rounded-xl p-8 mb-8 interactive-card">
                         <p class="themeable-text leading-relaxed mb-4">
                             기사는 벤자민 라일리(Benjamin Riley)의 주장을 인용하여, 인간이 언어 유창성을 지능과 동일시하는 경향이 있지만, 최신 신경과학 연구는 이 둘이 별개의 기능임을 시사한다고 강조한다.
                         </p>
@@ -188,7 +410,7 @@
 
                     <h3 class="text-2xl font-semibold themeable-heading mb-6">1.2 창의성의 한계: 데이비드 크로플리의 "실용적 예술가"론</h3>
 
-                    <div class="themeable-card rounded-xl p-8 mb-8">
+                    <div class="themeable-card rounded-xl p-8 mb-8 interactive-card">
                         <p class="themeable-text leading-relaxed mb-4">
                             사우스오스트레일리아 대학의 데이비드 크로플리(David H. Cropley) 교수는 LLM을 <strong class="accent-text">"실용적 예술가(serviceable artists)"</strong>로 규정하며 그 창의적 한계를 지적한다.
                         </p>
@@ -199,7 +421,7 @@
 
                     <h3 class="text-2xl font-semibold themeable-heading mb-6">1.3 얀 르쿤의 세계 모델 부재론</h3>
 
-                    <div class="themeable-card rounded-xl p-8 mb-8">
+                    <div class="themeable-card rounded-xl p-8 mb-8 interactive-card">
                         <p class="themeable-text leading-relaxed mb-4">
                             기사는 또한 튜링상 수상자이자 Meta의 수석 AI 과학자인 얀 르쿤(Yann LeCun)의 회의론을 비중 있게 다룬다. 르쿤은 <strong class="text-teal-400">텍스트 기반의 자기회귀(autoregressive) 모델이 물리적 세계에 대한 이해 없이 다음 단어만을 예측하도록 훈련되었기 때문에 일반 인공지능(AGI)에 도달할 수 없다</strong>고 주장한다.
                         </p>
@@ -278,7 +500,7 @@
                             LLM 옹호론자들은 모델의 크기가 커질수록 지능이 향상된다는 '스케일링 법칙(Scaling Laws)'을 주장하지만, 최근 연구는 이 법칙이 항상 성립하지 않음을 보여준다. <strong class="accent-text">'역전된 스케일링(Inverse Scaling)' 현상</strong>은 모델이 커질수록 특정 과제에서 오히려 성능이 떨어지는 현상을 말한다.
                         </p>
 
-                        <div class="overflow-x-auto my-8">
+                        <div class="table-wrapper my-8">
                             <table class="min-w-full themeable-table">
                                 <thead>
                                     <tr>
@@ -288,18 +510,18 @@
                                     </tr>
                                 </thead>
                                 <tbody>
-                                    <tr>
-                                        <td><strong class="text-teal-400">모방의 덫</strong></td>
+                                    <tr class="comparison-row">
+                                        <td><strong class="teal-text">모방의 덫</strong></td>
                                         <td>모델이 커질수록 훈련 데이터에 포함된 인간의 오개념이나 편향을 더 강력하게 모방함</td>
                                         <td>지능의 증가가 아니라 '모방 능력'의 증가일 뿐임을 시사</td>
                                     </tr>
-                                    <tr>
-                                        <td><strong class="text-teal-400">부정(Negation) 처리 실패</strong></td>
+                                    <tr class="comparison-row">
+                                        <td><strong class="teal-text">부정(Negation) 처리 실패</strong></td>
                                         <td>"A가 아닌 것은?"과 같은 질문에서, 큰 모델일수록 "A"와 관련된 강한 통계적 연관성에 이끌려 오답을 냄</td>
                                         <td>논리적 연산보다 통계적 연상 작용이 우세함을 증명</td>
                                     </tr>
-                                    <tr>
-                                        <td><strong class="text-teal-400">추론의 취약성</strong></td>
+                                    <tr class="comparison-row">
+                                        <td><strong class="teal-text">추론의 취약성</strong></td>
                                         <td>'생각의 사슬(CoT)' 프롬프팅이 추론 능력을 향상시키는 것처럼 보이지만, 실제로는 추론의 형식을 흉내 낼 뿐</td>
                                         <td>추론 과정과 정답 간의 인과관계가 결여된 '무늬만 추론'임</td>
                                     </tr>
@@ -382,7 +604,7 @@
                             크로플리 교수가 LLM을 "평범한 수준"이라고 폄하한 것과 달리, 객관적인 창의성 벤치마크 결과는 다른 이야기를 한다. 2023년 구직(Guzik) 등의 연구에서 GPT-4는 표준화된 창의성 검사인 <strong class="text-teal-400">'토런스 창의력 검사(Torrance Tests of Creative Thinking, TTCT)'</strong>를 수행했다.
                         </p>
 
-                        <div class="overflow-x-auto my-8">
+                        <div class="table-wrapper my-8">
                             <table class="min-w-full themeable-table">
                                 <thead>
                                     <tr>
@@ -392,18 +614,18 @@
                                     </tr>
                                 </thead>
                                 <tbody>
-                                    <tr>
-                                        <td><strong class="text-teal-400">독창성 (Originality)</strong></td>
+                                    <tr class="comparison-row">
+                                        <td><strong class="teal-text">독창성 (Originality)</strong></td>
                                         <td>상위 1%</td>
                                         <td>인간 피험자의 99%보다 더 독특하고 드문 아이디어를 생성함</td>
                                     </tr>
-                                    <tr>
-                                        <td><strong class="text-teal-400">유창성 (Fluency)</strong></td>
+                                    <tr class="comparison-row">
+                                        <td><strong class="teal-text">유창성 (Fluency)</strong></td>
                                         <td>상위 1%</td>
                                         <td>주어진 시간 내에 압도적으로 많은 아이디어를 산출함</td>
                                     </tr>
-                                    <tr>
-                                        <td><strong class="text-teal-400">유연성 (Flexibility)</strong></td>
+                                    <tr class="comparison-row">
+                                        <td><strong class="teal-text">유연성 (Flexibility)</strong></td>
                                         <td>상위권</td>
                                         <td>다양한 범주를 넘나드는 사고 전환 능력을 보여줌</td>
                                     </tr>
@@ -497,7 +719,7 @@
                 <section id="pebblous-view" class="mb-16 fade-in-card">
                     <h2 class="text-3xl font-bold themeable-heading mb-8">페블러스의 관점: 데이터 품질이 만드는 지능의 차이</h2>
 
-                    <div class="bg-gradient-to-r from-orange-500/10 to-teal-500/10 border-l-4 border-orange-500 p-8 rounded-r-xl mb-8">
+                    <div class="themeable-card rounded-xl p-8 mb-8 stat-card">
                         <p class="text-lg font-semibold themeable-heading mb-4">왜 페블러스는 LLM 지능 논쟁에 주목하는가?</p>
                         <p class="themeable-text leading-relaxed mb-4">
                             페블러스는 이 논쟁이 단순히 철학적 호기심을 넘어 <strong class="accent-text">실질적인 엔지니어링 문제</strong>라고 본다. LLM이 '확률적 앵무새'에서 '창발적 지능'으로 나아가는 핵심 요인은 바로 <strong class="text-teal-400">학습 데이터의 품질</strong>이기 때문이다.
@@ -526,7 +748,7 @@
                         </ul>
                     </div>
 
-                    <div class="bg-slate-800/30 border border-teal-500/40 p-8 rounded-xl">
+                    <div class="themeable-card rounded-xl p-8 stat-card">
                         <p class="text-lg font-semibold themeable-heading mb-4">페블러스의 비전</p>
                         <p class="themeable-text leading-relaxed">
                             LLM이 AGI로 가는 길목에 있다면, 그 길을 닦는 것은 바로 <strong class="accent-text">고품질 데이터</strong>다. 페블러스는 신경과학, 인지심리학, 기계적 해석가능성 연구의 최신 성과를 데이터 과학에 적용하여, <strong class="text-teal-400">AI가 단순히 말하는 것을 넘어 생각하고, 이해하고, 창조하는 파트너</strong>로 진화할 수 있도록 돕는다.
@@ -699,7 +921,7 @@
                 publishDate: "2025년 11월 28일",
                 publisher: "(주)페블러스 데이터 커뮤니케이션팀",
                 pageTitle: "지능적 앵무새의 탄생: LLM 지능 논쟁과 창발적 가능성 | 페블러스",
-                defaultTheme: "dark",
+                defaultTheme: "light",
 
                 // SEO Phase 2: Related Posts & Breadcrumbs
                 category: "tech",
