--- a/project/AADS/manufacturing-qa-dataset.html
+++ b/project/AADS/manufacturing-qa-dataset.html
@@ -1382,9 +1382,9 @@
                         자주 묻는 질문 (FAQ)
                     </h2>
 
-                    <div itemscope itemtype="https://schema.org/FAQPage" class="space-y-4">
+                    <div class="space-y-4">
                         <!-- FAQ 1 -->
-                        <div itemscope itemprop="mainEntity" itemtype="https://schema.org/Question"
+                        <div itemscope itemtype="https://schema.org/Question"
                              class="interactive-card border themeable-border rounded-lg p-6">
                             <h3 itemprop="name" class="text-xl font-semibold themeable-heading mb-3">
                                 AADS가 제조 분야 QA 데이터셋을 어떻게 구축하나요?
@@ -1402,7 +1402,7 @@
                         </div>
 
                         <!-- FAQ 2 -->
-                        <div itemscope itemprop="mainEntity" itemtype="https://schema.org/Question"
+                        <div itemscope itemtype="https://schema.org/Question"
                              class="interactive-card border themeable-border rounded-lg p-6">
                             <h3 itemprop="name" class="text-xl font-semibold themeable-heading mb-3">
                                 LLM 파인튜닝에 왜 QA 형식이 중요한가요?
@@ -1420,7 +1420,7 @@
                         </div>
 
                         <!-- FAQ 3 -->
-                        <div itemscope itemprop="mainEntity" itemtype="https://schema.org/Question"
+                        <div itemscope itemtype="https://schema.org/Question"
                              class="interactive-card border themeable-border rounded-lg p-6">
                             <h3 itemprop="name" class="text-xl font-semibold themeable-heading mb-3">
                                 14개 데이터셋 중 가장 높은 성능을 보인 것은 무엇인가요?
@@ -1439,7 +1439,7 @@
                         </div>
 
                         <!-- FAQ 4 -->
-                        <div itemscope itemprop="mainEntity" itemtype="https://schema.org/Question"
+                        <div itemscope itemtype="https://schema.org/Question"
                              class="interactive-card border themeable-border rounded-lg p-6">
                             <h3 itemprop="name" class="text-xl font-semibold themeable-heading mb-3">
                                 멀티모달 데이터가 LLM 파인튜닝에 어떤 이점을 제공하나요?
@@ -1458,7 +1458,7 @@
                         </div>
 
                         <!-- FAQ 5 -->
-                        <div itemscope itemprop="mainEntity" itemtype="https://schema.org/Question"
+                        <div itemscope itemtype="https://schema.org/Question"
                              class="interactive-card border themeable-border rounded-lg p-6">
                             <h3 itemprop="name" class="text-xl font-semibold themeable-heading mb-3">
                                 데이터 품질 관리(D 유형)가 QA 데이터셋에 포함된 이유는?
@@ -1477,7 +1477,7 @@
                         </div>
 
                         <!-- FAQ 6 -->
-                        <div itemscope itemprop="mainEntity" itemtype="https://schema.org/Question"
+                        <div itemscope itemtype="https://schema.org/Question"
                              class="interactive-card border themeable-border rounded-lg p-6">
                             <h3 itemprop="name" class="text-xl font-semibold themeable-heading mb-3">
                                 프롬프트 템플릿을 다른 도메인에 적용할 때 주의할 점은?
@@ -1497,7 +1497,7 @@
                         </div>
 
                         <!-- FAQ 7 -->
-                        <div itemscope itemprop="mainEntity" itemtype="https://schema.org/Question"
+                        <div itemscope itemtype="https://schema.org/Question"
                              class="interactive-card border themeable-border rounded-lg p-6">
                             <h3 itemprop="name" class="text-xl font-semibold themeable-heading mb-3">
                                 AADS QA 데이터셋이 DataClinic과 어떻게 연계되나요?
