--- a/project/AADS/manufacturing-qa-dataset.html
+++ b/project/AADS/manufacturing-qa-dataset.html
@@ -29,7 +29,7 @@
     <!-- SEO Meta Tags -->
     <title id="page-title">제조 분야 LLM 파인튜닝용 QA 데이터셋 구축: AADS의 피지컬 AI 접근법 | 페블러스</title>
     <meta id="meta-description" name="description" content="페블러스 AADS가 제조 현장의 14개 도메인(OHT/AGV, 3D 프린팅, 배터리, 용접 등)에서 구축한 28쌍 LLM 파인튜닝용 QA 데이터셋. 도메인 지식, 데이터 구조, AI 모델, 품질 관리를 아우르는 데이터 중심 AI 접근법을 소개합니다.">
-    <meta id="meta-keywords" name="keywords" content="LLM 파인튜닝, LLM Fine-tuning, QA 데이터셋, Question-Answer Dataset, 제조 분야, Manufacturing AI, AADS, Agentic AI Data Scientist, 피지컬 AI, Physical AI, 데이터 품질, Data Quality, 데이터 중심 AI, Data-Centric AI, 멀티모달 데이터, Multimodal Data, 도메인 지식, Domain Knowledge, OHT, AGV, 탄화 예지보전, 3D 프린팅, 3D Printing, 금속 적층, Metal Additive Manufacturing, 배터리 불량, Battery Defect, 용접 검사, Welding Inspection, 건설기계, Construction Equipment, LNG 탱크, LNG Tank, P&ID, 선박 도장, Ship Coating, 김치 품질, Kimchi Quality, NILM, 비파괴 검사, Non-Destructive Testing, CMF, 재료 물성, Material Properties, Few-Shot Learning, 퓨샷 러닝, 프롬프트 엔지니어링, Prompt Engineering, 라벨링, Labeling, 데이터 검수, Data Validation, mAP, F1-score, mIoU, 페블러스, Pebblous, DataClinic, 데이터클리닉">
+    <meta id="meta-keywords" name="keywords" content="LLM 파인튜닝, LLM Fine-tuning, QA 데이터셋, Question-Answer Dataset, 제조 분야, Manufacturing AI, 제조 데이터, Manufacturing Data, AADS, Agentic AI Data Scientist, 피지컬 AI, Physical AI, 데이터 품질, Data Quality, 데이터 중심 AI, Data-Centric AI, 멀티모달 데이터, Multimodal Data, 도메인 지식, Domain Knowledge, OHT, AGV, 탄화 예지보전, 3D 프린팅, 3D Printing, 금속 적층, Metal Additive Manufacturing, 배터리 불량, Battery Defect, 용접 검사, Welding Inspection, 건설기계, Construction Equipment, LNG 탱크, LNG Tank, P&ID, 선박 도장, Ship Coating, 김치 품질, Kimchi Quality, NILM, 비파괴 검사, Non-Destructive Testing, CMF, 재료 물성, Material Properties, Few-Shot Learning, 퓨샷 러닝, 프롬프트 엔지니어링, Prompt Engineering, 라벨링, Labeling, 데이터 검수, Data Validation, mAP, F1-score, mIoU, 페블러스, Pebblous, DataClinic, 데이터클리닉">
     <meta name="robots" content="index, follow">
 
     <link id="hreflang-ko" rel="alternate" hreflang="ko" href="https://blog.pebblous.ai/project/AADS/manufacturing-qa-dataset.html">
@@ -114,7 +114,7 @@
             "@type": "WebPage",
             "@id": "https://blog.pebblous.ai/project/AADS/manufacturing-qa-dataset.html"
         },
-        "keywords": "LLM 파인튜닝, QA 데이터셋, 제조 분야, AADS, 피지컬 AI, 데이터 품질, 데이터 중심 AI, 멀티모달 데이터, 도메인 지식, Manufacturing AI, Physical AI",
+        "keywords": "LLM 파인튜닝, QA 데이터셋, 제조 분야, 제조 데이터, AADS, 피지컬 AI, 데이터 품질, 데이터 중심 AI, 멀티모달 데이터, 도메인 지식, Manufacturing AI, Manufacturing Data, Physical AI",
         "articleSection": "Technology",
         "inLanguage": "ko-KR",
         "isAccessibleForFree": true,
@@ -1691,7 +1691,7 @@
                 articlePath: "project/AADS/manufacturing-qa-dataset.html",
                 tags: [
                 "LLM 파인튜닝", "LLM Fine-tuning", "QA 데이터셋", "Question-Answer Dataset",
-                "제조 분야", "Manufacturing AI", "AADS", "Agentic AI Data Scientist",
+                "제조 분야", "Manufacturing AI", "제조 데이터", "Manufacturing Data", "AADS", "Agentic AI Data Scientist",
                 "피지컬 AI", "Physical AI", "데이터 품질", "Data Quality",
                 "데이터 중심 AI", "Data-Centric AI", "멀티모달 데이터", "Multimodal Data",
                 "도메인 지식", "Domain Knowledge", "OHT", "AGV", "탄화 예지보전",
