--- a/project/AADS/manufacturing-qa-dataset.html
+++ b/project/AADS/manufacturing-qa-dataset.html
@@ -1658,6 +1658,40 @@
                     </ol>
                 </section>
 
+                <!-- PDF Download Section -->
+                <section id="pdf-download" class="mb-12">
+                    <h2 class="text-3xl font-bold themeable-heading mb-6 pb-3 border-b-2 themeable-border">
+                        📄 원본 보고서 다운로드
+                    </h2>
+
+                    <div class="themeable-bg card-hover rounded-lg p-8 text-center">
+                        <div class="mb-4">
+                            <svg class="w-16 h-16 mx-auto text-orange-500 mb-4" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M7 21h10a2 2 0 002-2V9.414a1 1 0 00-.293-.707l-5.414-5.414A1 1 0 0012.586 3H7a2 2 0 00-2 2v14a2 2 0 002 2z"></path>
+                            </svg>
+                            <h3 class="text-xl font-semibold themeable-heading mb-2">
+                                AADS LLM 파인튜닝용 QA 데이터셋 구축: 제조 분야
+                            </h3>
+                            <p class="themeable-text-secondary mb-6">
+                                제조 현장의 14개 도메인과 28쌍의 QA 데이터를 상세히 담은 원본 보고서를 다운로드하세요.
+                            </p>
+                        </div>
+
+                        <a href="/project/AADS/source/AADS LLM 파인튜닝용 QA 데이터셋 구축_ 제조 분야.pdf"
+                           download="AADS_제조분야_QA데이터셋_구축보고서.pdf"
+                           class="inline-flex items-center gap-2 bg-orange-500 hover:bg-orange-600 text-white font-semibold px-6 py-3 rounded-lg transition-all transform hover:scale-105 shadow-lg hover:shadow-xl">
+                            <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 10v6m0 0l-3-3m3 3l3-3m2 8H7a2 2 0 01-2-2V5a2 2 0 012-2h5.586a1 1 0 01.707.293l5.414 5.414a1 1 0 01.293.707V19a2 2 0 01-2 2z"></path>
+                            </svg>
+                            <span>PDF 다운로드</span>
+                        </a>
+
+                        <div class="mt-6 text-sm themeable-text-muted">
+                            <p>파일 형식: PDF | 작성일: 2025년 11월 29일 | 페블러스 데이터 커뮤니케이션 팀</p>
+                        </div>
+                    </div>
+                </section>
+
                 <!-- Related Posts Section -->
                 <section id="related-posts" class="mt-12">
                     <h3 class="text-2xl font-bold themeable-heading mb-6">관련 포스팅</h3>
