--- a/project/AADS/robot-qa-dataset-2.html
+++ b/project/AADS/robot-qa-dataset-2.html
@@ -1691,8 +1691,8 @@
                             </p>
                         </div>
 
-                        <a href="/project/AADS/source/AADS LLM 파인튜닝용 QA 데이터셋 구축_ 로봇 분야.pdf"
-                           download="AADS_로봇분야_QA데이터셋_구축보고서.pdf"
+                        <a href="/project/AADS/source/AADS LLM 파인튜닝용 QA 데이터셋 구축_ 로봇 분야 데이터품질 관점.pdf"
+                           download="AADS_로봇분야_QA데이터셋_구축보고서_데이터품질관점.pdf"
                            class="inline-flex items-center gap-2 bg-orange-500 hover:bg-orange-600 text-white font-semibold px-6 py-3 rounded-lg transition-all transform hover:scale-105 shadow-lg hover:shadow-xl">
                             <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 10v6m0 0l-3-3m3 3l3-3m2 8H7a2 2 0 01-2-2V5a2 2 0 012-2h5.586a1 1 0 01.707.293l5.414 5.414a1 1 0 01.293.707V19a2 2 0 01-2 2z"></path>
