--- a/project/AADS/eu-ai-act-qa-dataset.html
+++ b/project/AADS/eu-ai-act-qa-dataset.html
@@ -273,7 +273,7 @@
                         <div class="card-hover themeable-card rounded-lg p-6">
                             <h3 class="text-xl font-bold themeable-heading mb-4">1️⃣ 일반 목표: 단일 시장 및 신뢰할 수 있는 AI 조성</h3>
                             <p class="themeable-text-secondary mb-4">단일 시장의 적절한 기능을 보장하고, 신뢰할 수 있는 AI의 개발 및 사용을 위한 조건을 조성합니다.</p>
-                            <div class="bg-slate-50 dark:bg-slate-800 rounded p-4 text-sm themeable-text">
+                            <div class="themeable-bg-secondary rounded p-4 text-sm themeable-text">
                                 <p class="mb-2"><strong>QA 샘플 예시 (유형 A):</strong></p>
                                 <p class="italic">Q: EU AI Act의 일반적인 목표는 무엇이며, 이는 유럽연합의 어떤 핵심 가치를 기반으로 합니까?</p>
                                 <p class="mt-2">A: 개입의 일반적인 목표는 <strong>단일 시장</strong>의 적절한 기능을 보장하고, AI 시스템이 안전하며 기존 법률과 <strong>연합 가치를 준수</strong>하도록 조건을 조성하는 것입니다.</p>
@@ -284,7 +284,7 @@
                         <div class="card-hover themeable-card rounded-lg p-6">
                             <h3 class="text-xl font-bold themeable-heading mb-4">2️⃣ 특정 목표 1: 안전성 및 기본권 존중</h3>
                             <p class="themeable-text-secondary mb-4">고위험 AI 시스템에 대해 안전성을 보장하고 기본권 및 연합 가치를 존중하도록 합니다.</p>
-                            <div class="bg-slate-50 dark:bg-slate-800 rounded p-4 text-sm themeable-text">
+                            <div class="themeable-bg-secondary rounded p-4 text-sm themeable-text">
                                 <p class="mb-2"><strong>QA 샘플 예시 (유형 C):</strong></p>
                                 <p class="italic">Q: 교육 및 직업 훈련 기관에서 고위험 AI 시스템으로 분류되는 두 가지 구체적인 사용 사례를 제시하십시오.</p>
                                 <p class="mt-2">A: 개인이 받을 수 있거나 접근할 수 있는 <strong>교육 수준을 평가</strong>하는 목적으로 사용되는 AI 시스템, 또는 시험 중 학생의 <strong>금지된 행동을 모니터링 및 탐지</strong>하는 목적으로 사용되는 AI 시스템입니다.</p>
@@ -295,7 +295,7 @@
                         <div class="card-hover themeable-card rounded-lg p-6">
                             <h3 class="text-xl font-bold themeable-heading mb-4">3️⃣ 특정 목표 2: 법적 확실성 확보</h3>
                             <p class="themeable-text-secondary mb-4">명확하고 조화된 법적 프레임워크를 제공하여 AI 투자 및 혁신을 촉진합니다.</p>
-                            <div class="bg-slate-50 dark:bg-slate-800 rounded p-4 text-sm themeable-text">
+                            <div class="themeable-bg-secondary rounded p-4 text-sm themeable-text">
                                 <p class="mb-2"><strong>QA 샘플 예시 (유형 D):</strong></p>
                                 <p class="italic">Q: AI 혁신을 장려하면서도 규제 감독을 제공하기 위해 마련된 통제된 환경은 무엇이며, 이를 통해 무엇을 향상시키고자 합니까?</p>
                                 <p class="mt-2">A: <strong>인공지능 규제 샌드박스</strong>가 설립되며, 이는 규제 감독 하에 혁신적인 AI 시스템을 개발, 훈련, 검증 및 테스트할 기회를 제공하여 <strong>법적 확실성</strong>을 향상시키고자 합니다.</p>
@@ -306,7 +306,7 @@
                         <div class="card-hover themeable-card rounded-lg p-6">
                             <h3 class="text-xl font-bold themeable-heading mb-4">4️⃣ 특정 목표 3: 거버넌스 및 효과적인 집행 강화</h3>
                             <p class="themeable-text-secondary mb-4">AI 시스템에 적용 가능한 기본권 및 안전 요구사항의 효과적인 집행을 강화합니다.</p>
-                            <div class="bg-slate-50 dark:bg-slate-800 rounded p-4 text-sm themeable-text">
+                            <div class="themeable-bg-secondary rounded p-4 text-sm themeable-text">
                                 <p class="mb-2"><strong>QA 샘플 예시 (유형 B):</strong></p>
                                 <p class="italic">Q: 규제 집행을 지원하기 위해 설립된 과학 패널(Scientific Panel)은 GPAI 모델 평가와 관련하여 어떤 데이터 관련 기능을 수행합니까?</p>
                                 <p class="mt-2">A: 과학 패널은 범용 AI 모델 및 시스템의 역량을 평가하기 위한 <strong>도구 및 방법론 개발</strong>에 기여하며, 이는 <strong>벤치마크(benchmarks)</strong> 개발을 포함합니다.</p>
@@ -317,7 +317,7 @@
                         <div class="card-hover themeable-card rounded-lg p-6">
                             <h3 class="text-xl font-bold themeable-heading mb-4">5️⃣ 특정 목표 4: 단일 시장 개발 촉진 및 시장 분열 방지</h3>
                             <p class="themeable-text-secondary mb-4">합법적이고 안전하며 신뢰할 수 있는 AI 애플리케이션의 단일 시장 개발을 촉진하고 시장 분열을 방지합니다.</p>
-                            <div class="bg-slate-50 dark:bg-slate-800 rounded p-4 text-sm themeable-text">
+                            <div class="themeable-bg-secondary rounded p-4 text-sm themeable-text">
                                 <p class="mb-2"><strong>QA 샘플 예시 (유형 C):</strong></p>
                                 <p class="italic">Q: 영향 평가 보고서에 따르면, AI Act의 규제 준수 비용과 관련하여 2020년 가장 높은 비용 가중치(0.210)를 차지할 것으로 예상된 산업 부문은 어디였습니까?</p>
                                 <p class="mt-2">A: <strong>제조업(Manufacturing)</strong>이 2020년에 0.210의 가중치로 가장 높은 규제 준수 비용 가중치를 차지할 것으로 예상되었습니다.</p>
