--- a/project/AADS/demo01.html
+++ b/project/AADS/demo01.html
@@ -10,6 +10,26 @@
 
     <meta name="description" content="AADS (Agentic AI Data Scientist) 과제 평가용 데모 - 과기부 글로벌 빅테크 육성사업 1단계. 데이터클리닉 2.0 데이터 진단 신청에서 평가 결과 확인까지.">
 
+    <!-- Open Graph -->
+    <meta property="og:title" content="AADS: Agentic AI Data Scientist | 과제 평가용 데모">
+    <meta property="og:description" content="AADS 1단계 과제 평가용 데모 - 데이터클리닉 2.0 에이전트 워크플로우와 AADS-KONI LLM으로 ISO 5259 품질 지수 90.5점 달성">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://blog.pebblous.ai/project/AADS/demo01.html">
+    <meta property="og:image" content="https://blog.pebblous.ai/project/AADS/demo01/AADS-Y1-demo-01-poster.jpg">
+    <meta property="og:image:width" content="1920">
+    <meta property="og:image:height" content="1080">
+    <meta property="og:image:alt" content="AADS 데이터클리닉 2.0 데모 화면 - 에이전트 워크플로우 기반 데이터 품질 진단">
+    <meta property="og:site_name" content="Pebblous Blog">
+    <meta property="og:locale" content="ko_KR">
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:site" content="@pebblous">
+    <meta name="twitter:title" content="AADS: Agentic AI Data Scientist | 과제 평가용 데모">
+    <meta name="twitter:description" content="데이터클리닉 2.0 에이전트 워크플로우 + AADS-KONI LLM으로 ISO 5259 품질 지수 90.5점 달성">
+    <meta name="twitter:image" content="https://blog.pebblous.ai/project/AADS/demo01/AADS-Y1-demo-01-poster.jpg">
+    <meta name="twitter:image:alt" content="AADS 데이터클리닉 2.0 데모 화면">
+
     <title id="page-title">AADS (Agentic AI Data Scientist) 과제 평가용 데모 | Pebblous</title>
 
     <!-- Favicon -->
