--- a/project/AADS/demo01.html
+++ b/project/AADS/demo01.html
@@ -785,9 +785,151 @@
                 justify-content: center;
             }
         }
+
+        /* Password Protection Overlay */
+        .password-overlay {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: linear-gradient(135deg, #1f2937 0%, #111827 100%);
+            z-index: 99999;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+
+        .password-overlay.hidden {
+            display: none;
+        }
+
+        .password-modal {
+            background: white;
+            border-radius: 24px;
+            padding: 3rem;
+            max-width: 420px;
+            width: 90%;
+            box-shadow: 0 25px 50px -12px rgba(0, 0, 0, 0.5);
+            text-align: center;
+        }
+
+        .password-modal-logo {
+            width: 80px;
+            height: 80px;
+            margin: 0 auto 1.5rem;
+            background: linear-gradient(135deg, #F86825, #FF8C42);
+            border-radius: 20px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+
+        .password-modal-logo svg {
+            width: 40px;
+            height: 40px;
+            color: white;
+        }
+
+        .password-modal h2 {
+            font-size: 1.5rem;
+            font-weight: 800;
+            color: #1f2937;
+            margin-bottom: 0.5rem;
+        }
+
+        .password-modal p {
+            color: #6b7280;
+            margin-bottom: 1.5rem;
+            font-size: 0.9375rem;
+        }
+
+        .password-input-group {
+            position: relative;
+            margin-bottom: 1rem;
+        }
+
+        .password-input-group input {
+            width: 100%;
+            padding: 1rem 1.25rem;
+            border: 2px solid #e5e7eb;
+            border-radius: 12px;
+            font-size: 1rem;
+            outline: none;
+            transition: all 0.2s ease;
+        }
+
+        .password-input-group input:focus {
+            border-color: #F86825;
+            box-shadow: 0 0 0 3px rgba(248, 104, 37, 0.1);
+        }
+
+        .password-input-group input.error {
+            border-color: #ef4444;
+            animation: shake 0.5s ease-in-out;
+        }
+
+        @keyframes shake {
+            0%, 100% { transform: translateX(0); }
+            20%, 60% { transform: translateX(-5px); }
+            40%, 80% { transform: translateX(5px); }
+        }
+
+        .password-submit-btn {
+            width: 100%;
+            padding: 1rem;
+            background: linear-gradient(135deg, #F86825, #FF8C42);
+            color: white;
+            border: none;
+            border-radius: 12px;
+            font-size: 1rem;
+            font-weight: 600;
+            cursor: pointer;
+            transition: all 0.2s ease;
+        }
+
+        .password-submit-btn:hover {
+            transform: translateY(-2px);
+            box-shadow: 0 10px 25px -5px rgba(248, 104, 37, 0.4);
+        }
+
+        .password-error-msg {
+            color: #ef4444;
+            font-size: 0.875rem;
+            margin-top: 0.75rem;
+            display: none;
+        }
+
+        .password-error-msg.show {
+            display: block;
+        }
+
+        .content-locked {
+            overflow: hidden;
+        }
     </style>
 </head>
-<body class="themeable-bg themeable-text">
+<body class="themeable-bg themeable-text content-locked">
+    <!-- Password Protection Overlay -->
+    <div class="password-overlay" id="password-overlay">
+        <div class="password-modal">
+            <div class="password-modal-logo">
+                <svg fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 15v2m-6 4h12a2 2 0 002-2v-6a2 2 0 00-2-2H6a2 2 0 00-2 2v6a2 2 0 002 2zm10-10V7a4 4 0 00-8 0v4h8z"></path>
+                </svg>
+            </div>
+            <h2>AADS: Agentic AI Data Scientist</h2>
+            <p>과기부 AI 글로벌 빅테크 육성사업<br>1단계 평가용 데모<br><strong>(주)페블러스 + KISTI</strong></p>
+            <form id="password-form">
+                <div class="password-input-group">
+                    <input type="password" id="password-input" placeholder="암호를 입력하세요" autocomplete="off" required>
+                </div>
+                <button type="submit" class="password-submit-btn">확인</button>
+                <p class="password-error-msg" id="password-error">암호가 올바르지 않습니다. 다시 시도해 주세요.</p>
+            </form>
+        </div>
+    </div>
+
     <!-- Google Tag Manager (noscript) -->
     <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-57L9F58B"
     height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
@@ -1447,6 +1589,47 @@
     <!-- Common Scripts -->
     <script src="/scripts/common-utils.js"></script>
     <script>
+        // Password Protection
+        (function() {
+            const CORRECT_PASSWORD = 'pblsAADS2025';
+            const SESSION_KEY = 'aads_demo_auth';
+
+            // Check if already authenticated in this session
+            if (sessionStorage.getItem(SESSION_KEY) === 'true') {
+                document.body.classList.remove('content-locked');
+                document.getElementById('password-overlay').classList.add('hidden');
+            } else {
+                // Focus on password input
+                document.addEventListener('DOMContentLoaded', function() {
+                    document.getElementById('password-input').focus();
+                });
+
+                // Handle form submission
+                document.getElementById('password-form').addEventListener('submit', function(e) {
+                    e.preventDefault();
+                    const input = document.getElementById('password-input');
+                    const errorMsg = document.getElementById('password-error');
+
+                    if (input.value === CORRECT_PASSWORD) {
+                        // Success - store in session and show content
+                        sessionStorage.setItem(SESSION_KEY, 'true');
+                        document.body.classList.remove('content-locked');
+                        document.getElementById('password-overlay').classList.add('hidden');
+                    } else {
+                        // Error - show message and shake
+                        input.classList.add('error');
+                        errorMsg.classList.add('show');
+                        input.value = '';
+
+                        // Remove error state after animation
+                        setTimeout(function() {
+                            input.classList.remove('error');
+                        }, 500);
+                    }
+                });
+            }
+        })();
+
         // Page configuration
         const config = {
             showBreadcrumb: false,
